tests/ui/attributes/nonterminal-expansion.stderr
error: expected unsuffixed literal, found `n!()`
  --> $DIR/nonterminal-expansion.rs:7:22
   |
LL |         #[repr(align($n))]
   |                      ^^
...
LL | pass_nonterminal!(n!());
   | ----------------------- in this macro invocation
   |
   = note: this error originates in the macro `pass_nonterminal` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0693]: incorrect `repr(align)` attribute format: `align` expects a literal integer as argument
  --> $DIR/nonterminal-expansion.rs:7:22
   |
LL |         #[repr(align($n))]
   |                      ^^
...
LL | pass_nonterminal!(n!());
   | ----------------------- in this macro invocation
   |
   = note: this error originates in the macro `pass_nonterminal` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0693`.
